# example_project_end_to_end

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.env/: pyvenv.cfg
.github/workflows/: ci.yml
app/: cli.py
core/: calculator.py
src/app/: cli.py
src/core/: calculator.py
tests/: test_calculator.py  test_cli.py
